unpackaged/main/default/objects/Site_Feedback__c/Site_Feedback__c.object-meta.xml
<CustomObject>
    <label>Site Feedback</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>