unpackaged/main/default/objects/Site_Feedback__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional comments provided by the user when submitting feedback</description>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>