unpackaged/main/default/objects/Site_Feedback__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <description>The community page the user was on when they submitted feedback</description>
    <label>Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>