unpackaged/main/default/objects/Site_Feedback__c/fields/Positive__c.field-meta.xml
<CustomField>
    <fullName>Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, user clicked the &quot;Thumbs up&quot; icon. If unchecked, they clicked thumbs down</description>
    <label>Positive</label>
    <type>Checkbox</type>
</CustomField>