unpackaged/main/default/objects/Site_Feedback__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user providing the feedback</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>